--- a/config-yml/views.view.featured.yml
+++ b/config-yml/views.view.featured.yml
@@ -584,41 +584,30 @@ display:
             default_group: All
             default_group_multiple: {  }
             group_items: {  }
-          plugin_id: boolean
-      sorts:
-        random:
-          id: random
-          table: views
-          field: random
+      style:
+        type: default
+        options:
+          row_class: ''
+          default_row_class: false
+          uses_fields: false
+      row:
+        type: 'entity:node'
+        options:
           relationship: none
-          group_type: group
-          admin_label: ''
-          order: ASC
-          exposed: false
-          expose:
-            label: ''
-          plugin_id: random
-      title: 'Featured Publication'
+          view_mode: featured
+      query:
+        type: views_query
+        options:
+          query_comment: ''
+          disable_sql_rewrite: false
+          distinct: false
+          replica: false
+          query_tags: {  }
+      relationships: {  }
+      css_class: image-link-shadow
       header: {  }
       footer: {  }
-      empty:
-        area:
-          id: area
-          table: views
-          field: area
-          relationship: none
-          group_type: group
-          admin_label: ''
-          empty: true
-          tokenize: false
-          content:
-            value: "<h2 class=\"title\">Featured Publication</h2>\r\n<p><span class=\"glyphicon glyphicon-exclamation-sign\"></span>\r\n    No publications  are currently featured.\r\n</p>"
-            format: full_html
-          plugin_id: text
-      relationships: {  }
-      arguments: {  }
       display_extenders: {  }
-      css_class: image-link-shadow
     cache_metadata:
       max-age: 0
       contexts:
