NBNP-325 Add Holding end date search filter, use placeholder text

--- a/config-yml/views.view.print_title_listing.yml
+++ b/config-yml/views.view.print_title_listing.yml
@@ -20,138 +20,12 @@ base_table: serial_holding
 base_field: id
 display:
   default:
-    display_plugin: default
     id: default
     display_title: Master
+    display_plugin: default
     position: 0
     display_options:
-      access:
-        type: perm
-        options:
-          perm: 'access content'
-      cache:
-        type: tag
-        options: {  }
-      query:
-        type: views_query
-        options:
-          disable_sql_rewrite: false
-          distinct: false
-          replica: false
-          query_comment: ''
-          query_tags: {  }
-      exposed_form:
-        type: basic
-        options:
-          submit_button: 'Apply Filter'
-          reset_button: true
-          reset_button_label: Reset
-          exposed_sorts_label: 'Sort by'
-          expose_sort_order: true
-          sort_asc_label: Asc
-          sort_desc_label: Desc
-      pager:
-        type: full
-        options:
-          items_per_page: 25
-          offset: 0
-          id: 0
-          total_pages: null
-          tags:
-            previous: ‹‹
-            next: ››
-            first: '« First'
-            last: 'Last »'
-          expose:
-            items_per_page: false
-            items_per_page_label: 'Items per page'
-            items_per_page_options: '5, 10, 25, 50'
-            items_per_page_options_all: false
-            items_per_page_options_all_label: '- All -'
-            offset: false
-            offset_label: Offset
-          quantity: 9
-      style:
-        type: table
-        options:
-          grouping: {  }
-          row_class: ''
-          default_row_class: true
-          override: true
-          sticky: false
-          caption: ''
-          summary: ''
-          description: ''
-          columns:
-            holding_type: holding_type
-            title: title
-            field_sort_title: field_sort_title
-            field_place_of_publication: field_place_of_publication
-            field_place_of_publication_locality: field_place_of_publication_locality
-            holding_retention: holding_retention
-            field_frequency: field_frequency
-            holding_coverage: holding_coverage
-          info:
-            holding_type:
-              sortable: true
-              default_sort_order: asc
-              align: ''
-              separator: ''
-              empty_column: false
-              responsive: ''
-            title:
-              sortable: false
-              default_sort_order: asc
-              align: ''
-              separator: ''
-              empty_column: false
-              responsive: ''
-            field_sort_title:
-              sortable: true
-              default_sort_order: asc
-              align: ''
-              separator: ''
-              empty_column: false
-              responsive: ''
-            field_place_of_publication:
-              sortable: false
-              default_sort_order: asc
-              align: ''
-              separator: ''
-              empty_column: false
-              responsive: ''
-            field_place_of_publication_locality:
-              sortable: true
-              default_sort_order: asc
-              align: ''
-              separator: ''
-              empty_column: false
-              responsive: ''
-            holding_retention:
-              sortable: true
-              default_sort_order: asc
-              align: ''
-              separator: ''
-              empty_column: false
-              responsive: ''
-            field_frequency:
-              sortable: true
-              default_sort_order: asc
-              align: ''
-              separator: ''
-              empty_column: false
-              responsive: ''
-            holding_coverage:
-              sortable: false
-              default_sort_order: asc
-              align: ''
-              separator: ''
-              empty_column: false
-              responsive: ''
-          default: field_sort_title
-          empty_table: false
-      row:
-        type: fields
+      title: 'Current Print Subscriptions of Newspapers'
       fields:
         holding_type:
           id: holding_type
@@ -160,6 +34,9 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
+          entity_type: serial_holding
+          entity_field: holding_type
+          plugin_id: field
           label: Type
           exclude: true
           alter:
@@ -214,9 +91,6 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
-          entity_type: serial_holding
-          entity_field: holding_type
-          plugin_id: field
         title:
           id: title
           table: node_field_data
@@ -224,6 +98,9 @@ display:
           relationship: parent_title
           group_type: group
           admin_label: ''
+          entity_type: node
+          entity_field: title
+          plugin_id: field
           label: Title
           exclude: true
           alter:
@@ -279,9 +156,6 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
-          entity_type: node
-          entity_field: title
-          plugin_id: field
         field_sort_title:
           id: field_sort_title
           table: node__field_sort_title
@@ -289,6 +163,7 @@ display:
           relationship: parent_title
           group_type: group
           admin_label: 'Sorted Title'
+          plugin_id: field
           label: Title
           exclude: false
           alter:
@@ -344,7 +219,6 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
-          plugin_id: field
         field_place_of_publication:
           id: field_place_of_publication
           table: node__field_place_of_publication
@@ -352,6 +226,7 @@ display:
           relationship: parent_title
           group_type: group
           admin_label: ''
+          plugin_id: field
           label: 'Place of Publication'
           exclude: true
           alter:
@@ -406,7 +281,6 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
-          plugin_id: field
         field_place_of_publication_locality:
           id: field_place_of_publication_locality
           table: node__field_place_of_publication
@@ -414,6 +288,7 @@ display:
           relationship: parent_title
           group_type: group
           admin_label: 'Sorted Locality'
+          plugin_id: subdivision
           label: 'Place of Publication'
           exclude: false
           alter:
@@ -456,7 +331,6 @@ display:
           empty_zero: false
           hide_alter_empty: true
           display_name: true
-          plugin_id: subdivision
         holding_coverage:
           id: holding_coverage
           table: serial_holding
@@ -464,6 +338,9 @@ display:
           relationship: none
           group_type: group
           admin_label: 'Backup Retention -> Coverage Statement'
+          entity_type: serial_holding
+          entity_field: holding_coverage
+          plugin_id: field
           label: 'Holding Coverage Statement'
           exclude: true
           alter:
@@ -519,9 +396,6 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
-          entity_type: serial_holding
-          entity_field: holding_coverage
-          plugin_id: field
         holding_retention:
           id: holding_retention
           table: serial_holding
@@ -529,6 +403,9 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
+          entity_type: serial_holding
+          entity_field: holding_retention
+          plugin_id: field
           label: 'Retention Period'
           exclude: false
           alter:
@@ -584,9 +461,6 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
-          entity_type: serial_holding
-          entity_field: holding_retention
-          plugin_id: field
         field_frequency:
           id: field_frequency
           table: node__field_frequency
@@ -594,6 +468,7 @@ display:
           relationship: parent_title
           group_type: group
           admin_label: ''
+          plugin_id: field
           label: Frequency
           exclude: false
           alter:
@@ -711,6 +586,9 @@ display:
           relationship: none
           group_type: group
           admin_label: 'Print holding entity id'
+          entity_type: serial_holding
+          entity_field: holding_type
+          plugin_id: numeric
           operator: '='
           value:
             min: ''
@@ -724,17 +602,17 @@ display:
             description: ''
             use_operator: false
             operator: ''
+            operator_limit_selection: false
+            operator_list: {  }
             identifier: ''
             required: false
             remember: false
             multiple: false
             remember_roles:
               authenticated: authenticated
-            placeholder: ''
             min_placeholder: ''
             max_placeholder: ''
-            operator_limit_selection: false
-            operator_list: {  }
+            placeholder: ''
           is_grouped: false
           group_info:
             label: ''
@@ -747,9 +625,6 @@ display:
             default_group: All
             default_group_multiple: {  }
             group_items: {  }
-          entity_type: serial_holding
-          entity_field: holding_type
-          plugin_id: numeric
         combine:
           id: combine
           table: views
@@ -757,6 +632,7 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
+          plugin_id: combine
           operator: allwords
           value: ''
           group: 1
@@ -764,9 +640,11 @@ display:
           expose:
             operator_id: combine_op
             label: Search
-            description: 'Enter 1 or more filter terms'
+            description: ''
             use_operator: false
             operator: combine_op
+            operator_limit_selection: false
+            operator_list: {  }
             identifier: query
             required: false
             remember: false
@@ -777,9 +655,7 @@ display:
               administrator: '0'
               newspaper_administrator: '0'
               serial_ho: '0'
-            placeholder: ''
-            operator_limit_selection: false
-            operator_list: {  }
+            placeholder: 'Enter 1 or more filter terms'
           is_grouped: false
           group_info:
             label: ''
@@ -797,35 +673,136 @@ display:
             field_place_of_publication_locality: field_place_of_publication_locality
             holding_retention: holding_retention
             field_frequency: field_frequency
-          plugin_id: combine
-      sorts: {  }
-      title: 'Current Print Subscriptions of Newspapers'
-      header:
-        result:
-          id: result
-          table: views
-          field: result
+        holding_end_date:
+          id: holding_end_date
+          table: serial_holding
+          field: holding_end_date
           relationship: none
           group_type: group
           admin_label: ''
-          empty: false
-          content: "<h2 class=\"alert alert-success fade in\">\r\n    <span class=\"glyphicon glyphicon glyphicon-ok-circle\"></span>\r\n    Displaying @start - @end of @total results\r\n</h2>"
-          plugin_id: result
-      footer: {  }
-      empty:
-        area:
-          id: area
-          table: views
-          field: area
-          relationship: none
-          group_type: group
-          admin_label: ''
-          empty: true
-          tokenize: false
-          content:
-            value: "<div class=\"alert alert-warning fade in\">\r\n    <span class=\"glyphicon glyphicon-exclamation-sign\"></span>\r\n    No results were found.\r\n</div>"
-            format: full_html
-          plugin_id: text
+          entity_type: serial_holding
+          entity_field: holding_end_date
+          plugin_id: string
+          operator: empty
+          value: ''
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            operator_limit_selection: false
+            operator_list: {  }
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+      style:
+        type: table
+        options:
+          grouping: {  }
+          row_class: ''
+          default_row_class: true
+          columns:
+            holding_type: holding_type
+            title: title
+            field_sort_title: field_sort_title
+            field_place_of_publication: field_place_of_publication
+            field_place_of_publication_locality: field_place_of_publication_locality
+            holding_retention: holding_retention
+            field_frequency: field_frequency
+            holding_coverage: holding_coverage
+          default: field_sort_title
+          info:
+            holding_type:
+              sortable: true
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            title:
+              sortable: false
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            field_sort_title:
+              sortable: true
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            field_place_of_publication:
+              sortable: false
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            field_place_of_publication_locality:
+              sortable: true
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            holding_retention:
+              sortable: true
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            field_frequency:
+              sortable: true
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            holding_coverage:
+              sortable: false
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+          override: true
+          sticky: false
+          summary: ''
+          empty_table: false
+          caption: ''
+          description: ''
+      row:
+        type: fields
+      query:
+        type: views_query
+        options:
+          query_comment: ''
+          disable_sql_rewrite: false
+          distinct: false
+          replica: false
+          query_tags: {  }
       relationships:
         parent_title:
           id: parent_title
@@ -866,14 +843,14 @@ display:
         - 'config:field.storage.node.field_place_of_publication'
         - 'config:field.storage.node.field_sort_title'
   page_listing:
-    display_plugin: page
     id: page_listing
     display_title: 'Print titles'
+    display_plugin: page
     position: 1
     display_options:
+      display_description: ''
       display_extenders: {  }
       path: print-titles
-      display_description: ''
     cache_metadata:
       max-age: -1
       contexts:
