NBNP-326 Add/enable jQuery UI Datepicker project

--- a/config-yml/core.extension.yml
+++ b/config-yml/core.extension.yml
@@ -44,6 +44,7 @@ module:
   image: 0
   jquery_scrollup: 0
   jquery_ui: 0
+  jquery_ui_datepicker: 0
   jquery_ui_slider: 0
   jquery_ui_touch_punch: 0
   language: 0
