NBNP-326 Update dependencies for newspapers_core/pubform library

--- a/custom/modules/newspapers_core/newspapers_core.libraries.yml
+++ b/custom/modules/newspapers_core/newspapers_core.libraries.yml
@@ -10,7 +10,8 @@ pubform:
   js:
     js/pub-form.js: {}
   dependencies:
-     - core/jquery
+    - core/drupal
+    - jquery_ui_datepicker/datepicker
 
 tab-search:
   css:
